Fix some ui issues (#391)
* feat: popup + prod img

* fix: seelct style

* fix: ui update

* fix: show recipes error diets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,11 +130,11 @@ progress.uk-progress[value]::-webkit-progress-value {
   position: fixed;
   z-index: 1000;
   right: 0;
-  top: 0;
+  top: 80px;
   height: 100vh;
   max-width: 400px;
   min-width: 200px;
-  flex-direction: column-reverse;
+  flex-direction: column;
 
   .notification {
     width: 90%;
@@ -423,4 +423,8 @@ body {
 .allergen-alert a {
   color: black !important;
   opacity: 0.7;
+}
+
+.z-index-negative {
+  z-index: -1;
 }
