--- a/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
@@ -36,7 +36,16 @@
           </div>
           <div class="uk-width-1-2">
             <%= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select,
-                         collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a, input_html: {class: "uk-select"}, selected: f.object.recipe_quantity.quantity_type.id %>
+                         collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a,
+                         input_html: {class: "uk-select"}, selected: f.object.recipe_quantity.quantity_type.id %>
+
+            <%= ff.input :quantity_type, :label => t("recipe.title.ingredient "), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+              slimselect: true,
+              slimselectNoResult: t('slimselect.quantity_type.no_result'),
+              slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
+              slimselectPlaceholder: t('slimselect.quantity_type.placeholder'),
+            }, defaults: {input_class: ""} %>
+
           </div>
         <% end %>
       <% end %>
