--- a/app/views/recipes/_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_recipe_ingredient_fields.html.erb
@@ -16,7 +16,15 @@
           <%= ff.input :value, label: t("recipe.title.quantity_value") %>
         </div>
         <div class="uk-width-1-2">
-          <%= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select, collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a %>
+
+          <%= ff.input :quantity_type, :label => t("recipe.title.ingredient "), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+            slimselect: true,
+            slimselectNoResult: t('slimselect.quantity_type.no_result'),
+            slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
+            slimselectPlaceholder: t('slimselect.quantity_type.placeholder'),
+          }, defaults: {input_class: ""} %>
+
+          <%#= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select, collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a %>
         </div>
       <% end %>
     </div>
