Ajout possibilité de créer un notebook / shopping-list même si déjà présents (#394)
* feat: default val add to notebook

* feat: new nb + new shop list

* fix: trad

--- a/app/views/point_of_sales/show.html.erb
+++ b/app/views/point_of_sales/show.html.erb
@@ -85,9 +85,9 @@
         <table class="uk-table uk-table-responsive uk-table-divider uk-table-striped uk-table-middle">
           <thead>
           <tr>
-            <th><%= "TRAD TAGS" %></th>
-            <th><%= "TRAD INGR NAME" %></th>
-            <th><%= "TRAD PRICE" %></th>
+            <th><%= t('products.tag') %></th>
+            <th><%= t('products.name') %></th>
+            <th><%= t('products.price.label') %></th>
             <th colspan="2"></th>
           </tr>
           </thead>
